--- a/EmployeeDB/package.json
+++ b/EmployeeDB/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "4.17.1",
+    "npm": "8.3.1",
+    "node"" "16.14.0",
     "jade": "*",
     "stylus": "*",
     "mongodb": ">= 0.9.6-7",
